VE-2103: Updated the API and DB to remove the randomization strategy table.
