# src/validations/GroupValidator.js
@@ -11,11 +11,6 @@ class GroupValidator extends SchemaValidator {
       { paramName: 'parentId', type: 'numeric', required: false },
       { paramName: 'parentId', type: 'refData', entity: db.group },
       { paramName: 'refRandomizationStrategyId', type: 'numeric', required: true },
-      {
-        paramName: 'refRandomizationStrategyId',
-        type: 'refData',
-        entity: db.randomizationStrategy,
-      },
       { paramName: 'refGroupTypeId', type: 'numeric', required: true },
       { paramName: 'refGroupTypeId', type: 'refData', entity: db.groupType },
     ]
